--- a/index.html
+++ b/index.html
@@ -1,74 +1,311 @@
-/* ==========================
-   EXTRA ROMANTIC ADD-ONS
-   (No changes to your code)
-   ========================== */
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Be My Valentine 💖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-/* Soft heartbeat glow on the card */
-.card{
-  animation: cardGlow 3.2s ease-in-out infinite;
-}
-@keyframes cardGlow{
-  0%,100%{ box-shadow:0 12px 35px rgba(0,0,0,0.18); transform: translateY(0); }
-  50%{ box-shadow:0 14px 44px rgba(255,77,109,0.22); transform: translateY(-1px); }
-}
+  <style>
+    :root{
+      --bg1:#ffb7b7;
+      --bg2:#ffd1dc;
+      --card1:#fff1f2;
+      --card2:#ffe4e6;
+      --text:#4a1c2f;
+      --yes:#ff4d6d;
+    }
 
-/* Gentle pulse on YES (your JS scaling still works) */
-@keyframes yesPulse{
-  0%,100%{ filter: brightness(1); }
-  50%{ filter: brightness(1.08); }
-}
-#yes{
-  animation: yesPulse 1.6s ease-in-out infinite;
-}
+    body{
+      height:100vh;
+      margin:0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      font-family:system-ui, Arial;
+      color:var(--text);
+      overflow:hidden;
 
-/* Love letter modal */
-.modal{
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.35);
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 10001;
-  padding: 20px;
-}
-.modal-box{
-  max-width: 560px;
-  width: 100%;
-  background: linear-gradient(135deg,#fff1f2,#ffe4e6);
-  border-radius: 22px;
-  padding: 26px;
-  box-shadow: 0 18px 45px rgba(0,0,0,0.22);
-  text-align: center;
-}
-.modal-box h3{
-  margin: 0 0 10px;
-  font-size: 22px;
-}
-.modal-box p{
-  margin: 0;
-  font-size: 18px;
-  line-height: 1.6;
-  min-height: auto;
-  pointer-events: auto;
-}
-.modal-close{
-  margin-top: 18px;
-  background: #ff4d6d;
-  color: white;
-  border: none;
-  border-radius: 14px;
-  padding: 10px 18px;
-  font-size: 16px;
-  cursor: pointer;
-}
+      background:
+        radial-gradient(circle at 20% 30%, rgba(255,255,255,.35) 0 1px, transparent 2px),
+        radial-gradient(circle at 70% 20%, rgba(255,255,255,.28) 0 1px, transparent 2px),
+        radial-gradient(circle at 40% 75%, rgba(255,255,255,.22) 0 1px, transparent 2px),
+        radial-gradient(circle at 85% 65%, rgba(255,255,255,.25) 0 1px, transparent 2px),
+        radial-gradient(circle at 10% 80%, rgba(255,255,255,.2) 0 1px, transparent 2px),
+        linear-gradient(135deg, var(--bg1), var(--bg2));
+      background-size: 220px 220px, 260px 260px, 240px 240px, 300px 300px, 280px 280px, cover;
+      animation: twinkle 3.5s ease-in-out infinite alternate;
+    }
 
-/* Kiss trail hearts */
-.kiss {
-  position: fixed;
-  pointer-events: none;
-  z-index: 9998;
-  transform: translate(-50%, -50%);
-  opacity: 0.9;
-  text-shadow: 0 10px 18px rgba(0,0,0,0.14);
-}
+    @keyframes twinkle{
+      from{ filter: brightness(1); }
+      to{ filter: brightness(1.04); }
+    }
+
+    .card{
+      background: linear-gradient(135deg, var(--card1), var(--card2));
+      padding: 30px 35px;
+      border-radius: 22px;
+      text-align: center;
+      box-shadow: 0 12px 35px rgba(0,0,0,0.18);
+      max-width: 640px;
+      width: calc(100% - 40px);
+      cursor: pointer;
+      user-select: none;
+      position: relative;
+      z-index: 2;
+      animation: cardGlow 3.2s ease-in-out infinite;
+    }
+
+    @keyframes cardGlow{
+      0%,100%{ box-shadow:0 12px 35px rgba(0,0,0,0.18); }
+      50%{ box-shadow:0 14px 44px rgba(255,77,109,0.22); }
+    }
+
+    .ponyo-img{
+      width: 140px;
+      border-radius: 16px;
+      margin-bottom: 15px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      display:block;
+      margin-left:auto;
+      margin-right:auto;
+      pointer-events:none;
+    }
+
+    p{
+      font-size:18px;
+      line-height:1.6;
+      min-height: 120px;
+      pointer-events:none;
+    }
+
+    .buttons{
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:20px;
+      margin-top:20px;
+      position:relative;
+      height: 90px;
+    }
+
+    button{
+      padding: 12px 22px;
+      font-size: 18px;
+      border-radius: 14px;
+      border:none;
+      cursor:pointer;
+      transition: transform .15s ease, filter .25s ease;
+    }
+
+    #yes{
+      background: var(--yes);
+      color:white;
+      box-shadow: 0 10px 25px rgba(255,77,109,.35);
+      animation: yesPulse 1.6s ease-in-out infinite;
+    }
+
+    @keyframes yesPulse{
+      0%,100%{ filter: brightness(1); }
+      50%{ filter: brightness(1.08); }
+    }
+
+    #no{
+      background:#d3d3d3;
+      color:#333;
+    }
+
+    .confetti-layer{
+      position: fixed;
+      inset: 0;
+      pointer-events:none;
+      z-index: 9999;
+    }
+
+    .confetti{
+      position:absolute;
+      top:-10px;
+      width:10px;
+      height:14px;
+      border-radius:2px;
+      animation: fall linear forwards;
+    }
+
+    @keyframes fall{
+      to{ transform: translateY(110vh) rotate(720deg); }
+    }
+
+    .countdown{
+      position:absolute;
+      inset: 0;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      background: rgba(255,255,255,.55);
+      border-radius: 22px;
+      font-size: 54px;
+      font-weight: 800;
+      z-index: 5;
+    }
+
+    /* Love letter modal */
+    .modal{
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.35);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 10001;
+    }
+    .modal-box{
+      background: linear-gradient(135deg,#fff1f2,#ffe4e6);
+      padding: 26px;
+      border-radius: 22px;
+      max-width: 520px;
+      text-align:center;
+      box-shadow:0 18px 45px rgba(0,0,0,.22);
+    }
+    .modal-close{
+      margin-top: 18px;
+      background:#ff4d6d;
+      color:white;
+      border:none;
+      border-radius:14px;
+      padding:10px 18px;
+      cursor:pointer;
+    }
+
+    .kiss{
+      position:fixed;
+      pointer-events:none;
+      transform:translate(-50%,-50%);
+      z-index:9998;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="card" id="messageCard">
+    <img src="ponyo.jpg" class="ponyo-img" />
+
+    <h1>Hey my Ponyo 💖</h1>
+    <p id="typewriter"></p>
+
+    <h2>Will you be my Valentine? 💘</h2>
+
+    <div class="buttons" id="btnContainer">
+      <button id="yes">YES 💕</button>
+      <button id="no">NO 😅</button>
+    </div>
+  </div>
+
+  <!-- Hidden love letter -->
+  <div class="modal" id="loveModal">
+    <div class="modal-box">
+      <h3>💌 A little secret for my Ponyo…</h3>
+      <p>
+        Ponyo, I don’t just want you for Valentine’s Day…<br>
+        I want you for all my ordinary days too. 💖<br><br>
+        If love had a home, it would be wherever you are.
+      </p>
+      <button class="modal-close" id="closeModal">Aww 🥺💖</button>
+    </div>
+  </div>
+
+  <script>
+    const lines=[
+      "Thank you for leaving the sea and coming into my world.",
+      "You turned ordinary days into something magical.",
+      "Every smile of yours feels like sunshine after rain.",
+      "And somehow, everything feels better when you’re around."
+    ];
+
+    const txt=document.getElementById("typewriter");
+    const card=document.getElementById("messageCard");
+    const yes=document.getElementById("yes");
+    const no=document.getElementById("no");
+    const box=document.getElementById("btnContainer");
+    const modal=document.getElementById("loveModal");
+    const close=document.getElementById("closeModal");
+
+    let l=0,c=0,clicks=0;
+
+    (function type(){
+      if(l>=lines.length) return;
+      if(c<lines[l].length){
+        txt.innerHTML+=lines[l][c++];
+        setTimeout(type,22);
+      }else{
+        txt.innerHTML+="<br>";
+        l++; c=0;
+        setTimeout(type,420);
+      }
+    })();
+
+    function confetti(n=90){
+      const layer=document.createElement("div");
+      layer.className="confetti-layer";
+      document.body.appendChild(layer);
+      const colors=["#ff4d6d","#ffd166","#06d6a0","#4dabf7","#b197fc"];
+      for(let i=0;i<n;i++){
+        const d=document.createElement("div");
+        d.className="confetti";
+        d.style.left=Math.random()*100+"vw";
+        d.style.background=colors[Math.floor(Math.random()*colors.length)];
+        d.style.animationDuration=900+Math.random()*900+"ms";
+        layer.appendChild(d);
+      }
+      setTimeout(()=>layer.remove(),1600);
+    }
+
+    card.addEventListener("click",(e)=>{
+      if(e.target.closest("button")) return;
+      clicks++;
+      confetti();
+      if(clicks===10) modal.style.display="flex";
+    });
+
+    close.onclick=()=>modal.style.display="none";
+    modal.onclick=e=>{ if(e.target===modal) modal.style.display="none"; };
+
+    function moveNo(){
+      no.style.position="absolute";
+      no.style.left=Math.random()*(box.clientWidth-no.offsetWidth)+"px";
+      no.style.top=Math.random()*(box.clientHeight-no.offsetHeight)+"px";
+      yes.style.transform=`scale(${1+Math.min(clicks,6)*0.04})`;
+    }
+
+    ["mouseover","click","touchstart"].forEach(e=>{
+      no.addEventListener(e,x=>{
+        x.preventDefault(); x.stopPropagation(); moveNo();
+      });
+    });
+
+    yes.onclick=e=>{
+      e.stopPropagation();
+      const cd=document.createElement("div");
+      cd.className="countdown";
+      cd.textContent="3";
+      card.appendChild(cd);
+      let n=3;
+      const t=setInterval(()=>{
+        n--; cd.textContent=n||"💖";
+        if(n<=0){ clearInterval(t); confetti(140); }
+      },700);
+    };
+
+    document.addEventListener("mousemove",e=>{
+      const k=document.createElement("div");
+      k.className="kiss";
+      k.textContent="💖";
+      k.style.left=e.clientX+"px";
+      k.style.top=e.clientY+"px";
+      document.body.appendChild(k);
+      setTimeout(()=>k.remove(),800);
+    });
+  </script>
+
+</body>
+</html>
